--- a/calculator.html
+++ b/calculator.html
@@ -7,6 +7,10 @@
 			var num = document.getElementById("n1");
 			num.value = Math.pow(num.value, 3);
 		}
+		function seno() {
+			var num = document.getElementById("n1");
+			num.value = Math.sin(num.value);
+		}
 	</script>
 </head>
 
@@ -16,6 +20,7 @@
 	<input type="text" id="n1"><p>
 
 	<button onclick="cube()"> x^3 </button>
+	<button onclick="seno()"> seno(x) </button>
 </body>
 
 </html>
